# This is the full fwbackups changelog, with detailed listing of changes in the
# c++ branch (version 1.44.0)
|| Version 1.44.0-prealpha changes ||
* Mon May 4 2009 Stewart Adam <s.adam at diffingo.com>
  - Add keyboard shortcuts for menu items
  - Exporting sets is completely functional

* Thu Apr 30 2009 Stewart Adam <s.adam at diffingo.com>
  - UI work for "Choose Foo..." buttons complete
  - UI callbacks for export & import sets are complete

* Wed Apr 29 2009 Stewart Adam <s.adam at diffingo.com>
  - Preferences dialog functional
  - Hide irrelevant "Tray Area" section when running on OS X
  
* Tue Apr 28 2009 Stewart Adam <s.adam at diffingo.com>
  - Honor Qt::DecorationRole in custom_widgets
  
* Mon Apr 27 2009 Stewart Adam <s.adam at diffingo.com>
  - Store program data in ~/Library/Appliction Support/fwbackups on OS X
  - Use QSettings for program settings
  - Use QSettings for set configurations

* Sun Apr 26 2009 Stewart Adam <s.adam at diffingo.com>
  - Create the Restore UI, link button with the new window
  - Add note about Tango icons to AUTHORS

* Sat Apr 18 2009 Stewart Adam <s.adam at diffingo.com>
  - Initialize the configuration directory and log file upon startup
  - Implement basic logging system
  - Implement common.h with new functions for portably dealing with paths
  - Fix "About" dialog
  - Further simplify file layout

* Thu Apr 9 2009 Stewart Adam <s.adam at diffingo.com>
  - Restructure file layout
  - Load the logfile & display it in the Log Viewer

* Wed Apr 8 2009 Stewart Adam <s.adam at diffingo.com>
  - Fix bug where set*Mode could be called multiple times removing the wrong tabs
  - UI improvements
  - Additional callbacks

* Tue April 7 2009 Stewart Adam <s.adam at diffingo.com>
  - Major UI improvements
  - Add more callbacks for UI actions