@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>466</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -290,9 +290,6 @@
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_10">
-          <property name="spacing">
-           <number>-1</number>
-          </property>
           <property name="topMargin">
            <number>12</number>
           </property>
@@ -341,9 +338,6 @@
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <property name="spacing">
-           <number>-1</number>
-          </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
           </property>
@@ -510,6 +504,9 @@
    <property name="text">
     <string>Quit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="actionEdit_Set">
    <property name="text">
@@ -535,25 +532,40 @@
    <property name="text">
     <string>Overview</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
+   </property>
   </action>
   <action name="actionBackup_Sets">
    <property name="text">
     <string>Backup Sets</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+2</string>
    </property>
   </action>
   <action name="actionOne_Time_Backup">
    <property name="text">
     <string>One-Time Backup...</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+3</string>
+   </property>
   </action>
   <action name="actionLog_Viewer">
    <property name="text">
     <string>Log Viewer</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+6</string>
+   </property>
   </action>
   <action name="actionRestore">
    <property name="text">
     <string>Restore...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+4</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -655,6 +667,9 @@
   <action name="actionOperations">
    <property name="text">
     <string>Operations</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+5</string>
    </property>
   </action>
  </widget>
